--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-resizable": "^3.0.2",
+    "ajv": "^8.11.0",
     "assert": "^2.0.0",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
